--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -11,5 +11,5 @@ issuehunt: # Replace with a single IssueHunt username
 lfx_crowdfunding: # Replace with a single LFX Crowdfunding project-name e.g., cloud-foundry
 polar: # Replace with a single Polar username
 buy_me_a_coffee: ghostintranslation
-thanks_dev: # Replace with a single thanks.dev username
+thanks_dev: gh/ghostintranslation
 custom: # Replace with up to 4 custom sponsorship URLs e.g., ['link1', 'link2']
